[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Saiyan-Sans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Character Menu.gd" type="Script" id=2]
[ext_resource path="res://NotoSans-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Character Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 262.0
margin_top = 50.0
margin_right = 762.0
margin_bottom = 550.0
rect_min_size = Vector2( 500, 500 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 480.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/HBoxContainer"]
margin_right = 98.0
margin_bottom = 460.0
rect_min_size = Vector2( 50, 0 )

[node name="Vitality" type="Label" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 98.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Vitality"
align = 1

[node name="HSeparator7" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 98.0
margin_bottom = 32.0

[node name="Strength" type="Label" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 98.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Strength"
align = 1

[node name="HSeparator6" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 98.0
margin_bottom = 68.0

[node name="Agility" type="Label" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 98.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )
text = "Agility"
align = 1

[node name="HSeparator5" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 98.0
margin_bottom = 104.0

[node name="Durability" type="Label" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 98.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 4 )
text = "Durability"
align = 1

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 98.0
margin_bottom = 140.0

[node name="Force" type="Label" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 98.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 5 )
text = "Force"
align = 1

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 98.0
margin_bottom = 176.0

[node name="Spirit" type="Label" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 98.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 6 )
text = "Spirit"
align = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 98.0
margin_bottom = 212.0

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 98.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 7 )
text = "Power Level"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 152.0
margin_bottom = 460.0
rect_min_size = Vector2( 50, 0 )

[node name="vitality_button" type="Button" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 50.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )

[node name="HSeparator6" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 50.0
margin_bottom = 32.0

[node name="strength_button" type="Button" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 24 )

[node name="HSeparator5" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 64.0
margin_right = 50.0
margin_bottom = 68.0

[node name="agility_button" type="Button" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 50.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 24 )

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 100.0
margin_right = 50.0
margin_bottom = 104.0

[node name="durability_button" type="Button" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 108.0
margin_right = 50.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 24 )

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 136.0
margin_right = 50.0
margin_bottom = 140.0

[node name="force_button" type="Button" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 144.0
margin_right = 50.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 24 )

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 172.0
margin_right = 50.0
margin_bottom = 176.0

[node name="spirit_button" type="Button" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 180.0
margin_right = 50.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 24 )

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 208.0
margin_right = 50.0
margin_bottom = 212.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 216.0
margin_right = 50.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 24 )

[node name="Power Level" type="Label" parent="CenterContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2/CenterContainer"]
margin_left = 25.0
margin_right = 25.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 8 )
align = 1
